[package]
name = "kiwistand-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.2", features = ["eip712"] }
tokio = { version = "1.23.0", features = ["macros"] }
eyre = "0.6.8"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0.0"
rand = "0.8.5"
serde_json = "1.0"
