[package]
name = "kiwistand-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We're using DaniPope's ethers-rs fork as the main stream branch had issues with
# parsing the raw property name of `r#type`: https://t.me/ethers_rs/26846
ethers = { git = "https://github.com/DaniPopes/ethers-rs.git", branch = "fix/eip712-raw-idents" }
tokio = { version = "1.23.0", features = ["macros"] }
eyre = "0.6.8"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0.0"
rand = "0.8.5"
serde_json = "1.0"
reqwest = "0.11.16"
