[package]
name = "kiwistand-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We're using DaniPope's ethers-rs fork as the main stream branch had issues with
# parsing the raw property name of `r#type`: https://t.me/ethers_rs/26846
ethers = { rev = "5a85223", git = "https://github.com/gakonst/ethers-rs.git" }
tokio = { version = "1.27", features = ["macros"] }
eyre = "0.6.8"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0.0"
rand = "0.8.5"
serde_json = "1.0"
reqwest = "0.11"
